# CGAL_Delaunay_Triangulator

./: .gitignore  CMakeLists.txt  README.md  makefile
sources/: io.cpp  io.h  main_tri.cpp  string_management.cpp  string_management.h
